# MySIT

./: .gitignore  .mailmap  CLAUDE.md  CODE_REVIEW.md  README.md  controlnet.py  controlnet_sit.py  diverse_sampler.py  down.py  download.py  generate.py  generate_augmented.py  generate_multigpu.py  lightweight_controlnet.py  main.py  maskdataset.py  mytrain.py  pyproject.toml  sample_ddp.py  train_controlnet.py  train_controlnet_modular.py  train_small_sample.py  usage.md
datasets/: __init__.py  maskdataset.py
docs/: ARCHITECTURE.md
generation/: __init__.py  generate_augmented.py  generate_diverse.py  generate_multigpu.py  sample.py  sample_ddp.py
models/: __init__.py  controlnet.py  lightweight_controlnet.py  lora.py  medium_controlnet.py
training/: __init__.py  train.py  train_controlnet.py  train_controlnet_modular.py  train_fewshot.py  train_small_sample.py  train_utils.py
utils/: __init__.py
