[project]
name = "usdit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pillow>=12.1.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
]
